--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: stable
 before_install:
 - openssl aes-256-cbc -K $encrypted_f50a8a8bc67c_key -iv $encrypted_f50a8a8bc67c_iv
-  -in github_blg.enc -out ~\/.ssh/github_blg -d
+  -in github_blg.enc -out ~/.ssh/github_blg -d
 - chmod 600 ~/.ssh/github_blg
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/github_blg
