--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: node_js
 node_js: stable
 before_install:
 - openssl aes-256-cbc -K $encrypted_f50a8a8bc67c_key -iv $encrypted_f50a8a8bc67c_iv
-  -in github_blg.enc -out ~/.ssh/github_blg -d
-- chmod 600 ~/.ssh/github_blg
+  -in nopass.enc -out ~\/.ssh/nopass -d
+- chmod 600 ~/.ssh/nopass
 - eval $(ssh-agent)
-- ssh-add ~/.ssh/github_blg
+- ssh-add ~/.ssh/nopass
 - cp ssh_config ~/.ssh/config
 - git config --global user.name "gardenzjd"
 - git config --global user.email "gardenzjd@163.com"
